2015-07-26  Chung-Lin Tang  <cltang@codesourcery.com>

	* nptl/tst-join7mod.c: Add #include <string.h>.

2015-07-25  Chung-Lin Tang  <cltang@codesourcery.com>

	* sysdeps/nios2/libm-test-ulps: Update.

2015-07-25  Chung-Lin Tang  <cltang@codesourcery.com>

	* sysdeps/unix/sysv/linux/nios2/setcontext.S (__setcontext):
	Fix order of arguments to the rt_sigprocmask syscall.
	* sysdeps/unix/sysv/linux/nios2/swapcontext.S (__swapcontext):
	Likewise.

2015-07-24  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/bits/fcntl.h (O_SHLOCK, O_EXLOCK): Macros removed.

2015-07-24  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #18457]
	* nptl/Makefile (tests): New test case tst-join7.
	(modules-names): New test case module tst-join7mod.
	* nptl/tst-join7.c: New file.
	* nptl/tst-join7mod.c: New file.
	* Makeconfig (tls-model): Pass -ftls-model=initial-exec for
	all translation units in libc.so, libpthread.so and rtld.

2015-07-24  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2015-07-24  Andrew Senkevich  <andrew.senkevich@intel.com>

	* sysdeps/x86_64/fpu/multiarch/svml_d_cos8_core.S: Fixed AVX512 IFUNC.
	* sysdeps/x86_64/fpu/multiarch/svml_d_exp8_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_d_log8_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_d_pow8_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_d_sin8_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_d_sincos8_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_s_cosf16_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_s_expf16_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_s_logf16_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_s_powf16_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_s_sincosf16_core.S: Likewise.
	* sysdeps/x86_64/fpu/multiarch/svml_s_sinf16_core.S: Likewise.
	* sysdeps/x86_64/fpu/svml_d_wrapper_impl.h: Fixed wrappers to AVX2.
	* sysdeps/x86_64/fpu/svml_s_wrapper_impl.h: Likewise.